--- a/src/sass/vue-materialize.scss
+++ b/src/sass/vue-materialize.scss
@@ -1,3 +1,7 @@
-@import '~materialize-css/sass/materialize';
+@import "~materialize-css/sass/materialize";
 
+@import "components/variables";
+@import "components/typography";
 @import "components/form/box";
+@import "components/form/input-fields";
+@import "components/stepper";
