added event handler for stepper

--- a/src/sass/vue-materialize.scss
+++ b/src/sass/vue-materialize.scss
@@ -1,5 +1,7 @@
 @import "~materialize-css/sass/materialize";
 
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons");
+
 @import "components/variables";
 @import "components/typography";
 @import "components/form/box";
