--- a/src/sass/materialize-extended.scss
+++ b/src/sass/materialize-extended.scss
@@ -7,3 +7,6 @@
 @import "components/form/box";
 @import "components/form/input-fields";
 @import "components/stepper";
+@import "components/flexgrid";
+@import "components/layout";
+@import "components/display";
