--- a/src/sass/materialize-extended.scss
+++ b/src/sass/materialize-extended.scss
@@ -6,6 +6,8 @@
 @import "components/typography";
 @import "components/form/box";
 @import "components/form/input-fields";
+@import "components/form/select";
+@import "components/modal";
 @import "components/stepper";
 @import "components/flexgrid";
 @import "components/layout";
