--- a/src/sass/components/form/_input-fields.scss
+++ b/src/sass/components/form/_input-fields.scss
@@ -1,3 +1,16 @@
+.input-field {
+  div.input-field-select {
+    position: relative;
+  }
+  div.input-field-select::before {
+    content: 'arrow_drop_down';
+    right: 0;
+    margin-top: -4px;
+    position: absolute;
+    font-size: 24px;
+    font-family: 'Material Icons';
+  }
+}
 .select-wrapper input.select-dropdown:focus {
   box-shadow: 0 1px 0 0 $input-focus-color;
 }
