--- a/src/sass/components/_flexgrid.scss
+++ b/src/sass/components/_flexgrid.scss
@@ -27,6 +27,9 @@ $sizes: (
     flex-basis: 100%;
     padding: 0 0.75rem;
 }
+.flexgrid > .fgi.compact {
+    padding: 0 4px;
+}
 
 @each $breakpoint_name, $breakpoint in $breakpoints {
     @each $size_name, $size in $sizes {
